tutos/l12_helm_chart/atlas-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: atlas-test-atlas
  labels:
    app: atlas
    chart: atlas-0.1.0
    release: atlas-test
    heritage: Helm
spec:
  replicas: 1
  selector:
      matchLabels:
          app: atlas
          release: atlas-test
  template:
    metadata:
      labels:
        app: atlas
        release: atlas-test
    spec:
      containers:
        - name: atlas
          command: [
                    "/bin/bash",
                    "-c",
                    "/opt/apache-atlas-2.1.0/bin/atlas_start.py;
                    "
                    ]
          image: "sburn/apache-atlas"
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 21000
          volumeMounts:
          - name: atlas-config
            mountPath: /opt/apache-atlas-2.1.0/conf/atlas-application.properties
            subPath: atlas-application.properties
          - name: atlas-data-volume
            mountPath: /opt/apache-atlas-2.1.0/data       
      volumes:
      - name: atlas-config
        configMap:
          name: atlas-config
      - name: atlas-data-volume
        persistentVolumeClaim:
          claimName: atlas-data-claim
