tutos/l12_helm_chart/atlas-k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlas-test-atlas
  labels:
    app: atlas
    chart: atlas-0.1.0
    release: atlas-test
    heritage: Helm
spec:
  type: ClusterIP
  ports:
    - port: 21000
      targetPort: 21000
      protocol: TCP
      name: atlas
  selector:
    app: atlas
    release: atlas-test
