tutos/l12_helm_chart/atlas-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-atlas
spec:
  tls:
    - hosts:
        - atlas-test.lab.sspcloud.fr
  rules:
    - host: atlas-test.lab.sspcloud.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: atlas-test-atlas
                port: 
                  number: 21000
